; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/cell/extr_vma_map.c_vma_map_lookup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/cell/extr_vma_map.c_vma_map_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vma_to_fileoffset_map = type { i32, i32, i32, i32, i64, %struct.vma_to_fileoffset_map* }
%struct.spu = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vma_map_lookup(%struct.vma_to_fileoffset_map* %0, i32 %1, %struct.spu* %2, i32* %3) #0 {
  %5 = alloca %struct.vma_to_fileoffset_map*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.spu*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.vma_to_fileoffset_map* %0, %struct.vma_to_fileoffset_map** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.spu* %2, %struct.spu** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = add i32 268435456, %11
  store i32 %12, i32* %9, align 4
  br label %13

13:                                               ; preds = %67, %4
  %14 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %15 = icmp ne %struct.vma_to_fileoffset_map* %14, null
  br i1 %15, label %16, label %71

16:                                               ; preds = %13
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %19 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp ult i32 %17, %20
  br i1 %21, label %32, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %25 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %28 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = add i32 %26, %29
  %31 = icmp uge i32 %23, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %22, %16
  br label %67

33:                                               ; preds = %22
  %34 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %35 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %34, i32 0, i32 4
  %36 = load i64, i64* %35, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %57

38:                                               ; preds = %33
  %39 = load %struct.spu*, %struct.spu** %7, align 8
  %40 = getelementptr inbounds %struct.spu, %struct.spu* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %43 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %42, i32 0, i32 4
  %44 = load i64, i64* %43, align 8
  %45 = add nsw i64 %41, %44
  %46 = inttoptr i64 %45 to i32*
  %47 = load i32, i32* %46, align 4
  store i32 %47, i32* %10, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %50 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %49, i32 0, i32 2
  %51 = load i32, i32* %50, align 8
  %52 = icmp ne i32 %48, %51
  br i1 %52, label %53, label %54

53:                                               ; preds = %38
  br label %67

54:                                               ; preds = %38
  %55 = load i32, i32* %10, align 4
  %56 = load i32*, i32** %8, align 8
  store i32 %55, i32* %56, align 4
  br label %57

57:                                               ; preds = %54, %33
  %58 = load i32, i32* %6, align 4
  %59 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %60 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %59, i32 0, i32 0
  %61 = load i32, i32* %60, align 8
  %62 = sub i32 %58, %61
  %63 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %64 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %63, i32 0, i32 3
  %65 = load i32, i32* %64, align 4
  %66 = add i32 %62, %65
  store i32 %66, i32* %9, align 4
  br label %71

67:                                               ; preds = %53, %32
  %68 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %5, align 8
  %69 = getelementptr inbounds %struct.vma_to_fileoffset_map, %struct.vma_to_fileoffset_map* %68, i32 0, i32 5
  %70 = load %struct.vma_to_fileoffset_map*, %struct.vma_to_fileoffset_map** %69, align 8
  store %struct.vma_to_fileoffset_map* %70, %struct.vma_to_fileoffset_map** %5, align 8
  br label %13

71:                                               ; preds = %57, %13
  %72 = load i32, i32* %9, align 4
  ret i32 %72
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
